# OpenSM

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
source/: app.cpp  app.h  log.cpp  log.h  main.cpp  xmlbin.cpp  xmlbin.h  xmlresource.cpp  xmlresource.h
